cli/tests/ui/governance_use_requires_version.stderr
Error: manifest::feature_requires_manifest_version

  × check failed
  ╰─▶ using governance `use` section requires manifest_version >= 0.4.0, but
      found 0.3.0
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/governance_use_requires_version.json5:3:3]
 2 │   manifest_version: "0.3.0",
 3 │   use: {
   ·   ─┬─
   ·    ╰── unsupported manifest feature used here
 4 │     wrapper: "./governance_use_requires_version_wrapper.json5",
   ╰────
  help: set `manifest_version` to "0.4.0" or remove governance `use` section
